Lab3/africa-deployment.yaml
# africa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: africa
  namespace: world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: africa
  template:
    metadata:
      labels:
        app: africa
    spec:
      containers:
        - name: africa
          image: husseingalal/africa:latest
          ports:
            - containerPort: 80
