Lab3/services.yaml
# services.yaml
apiVersion: v1
kind: Service
metadata:
  name: africa
  namespace: world
spec:
  selector:
    app: africa
  ports:
    - port: 8888
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: europe
  namespace: world
spec:
  selector:
    app: europe
  ports:
    - port: 8888
      targetPort: 80
