Lab3/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: world
  namespace: world
spec:
  rules:
    - host: world.universe.mine
      http:
        paths:
          - path: /europe/
            pathType: Prefix
            backend:
              service:
                name: europe
                port:
                  number: 8888
          - path: /africa/
            pathType: Prefix
            backend:
              service:
                name: africa
                port:
                  number: 8888
